# Aquarium_Temperature_ESP32-C6-Matter

./: .gitignore  CMakeLists.txt  MATTER_SETUP.md  README.md  flash.sh  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32-C6-LCD-1.47-Test/: lv_conf.h  sdkconfig
ESP32-C6-LCD-1.47-Test/components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
ESP32-C6-LCD-1.47-Test/main/: CMakeLists.txt  main.c  temp_ui.c  temp_ui.h
ESP32-C6-LCD-1.47-Test/main/Wireless/: wifi_sta.c
components/lvgl__lvgl/: lv_conf.h
main/: CMakeLists.txt  aquarium_controller.c  aquarium_controller.h  aquarium_ui.c  aquarium_ui.h  idf_component.yml  main.c
main/LCD_Driver/: ST7789.c
main/LVGL_UI/: font_montserrat_thin_16.c  font_montserrat_thin_32.c  font_montserrat_thin_60.c  nemo_img.c  nemo_img.h
main/Matter/: aquarium_matter.cpp  aquarium_matter.h
main/RGB/: RGB.c  RGB.h
main/Wireless/: Wireless.h  wifi_sta.c
main/fonts/: font_temp_36.c  font_temp_72.c
